@@ -15,6 +15,8 @@ indicates the contributor was also the author of the fix; Thanks!
 
 ****	Fix "endclass" keyword misspelling.  [John Dickol]
 
+****	Fix preprocessor `else after series of `elsif.  [Mark Nodine]
+
 * Verilog::Language 3.024 2008/04/02
 
 ***	Verilog::Parser will now start parsing using the keywords
